welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: identifier expected but integer literal found.
  var pos : BigInt =-1
                     ^